fixed z-index to enable click events

--- a/styles.css
+++ b/styles.css
@@ -13,15 +13,14 @@ html{
     height: 75vh;
     margin: 100px auto;
     border-radius: 5px;
-    box-shadow: 0 25px 40px rgba(0, 0, 0, 0.4);
-    z-index: -1;
+    box-shadow: 0 25px 40px rgba(0, 0, 0, 0.4); 
     overflow: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     display: flex;
     justify-content: center;
     }
     
-    .circle{
+    /* .circle{
         background-color: rgb(255, 255, 255);
         box-shadow: 0px 5px 15px -3px rgba(17, 16, 17, 0.33);
         border-radius: 50%;
@@ -32,7 +31,7 @@ html{
         bottom: -4vh;
         justify-content: center; 
   
-    }
+    } */
       
       .myPic{
          width: 200px;
@@ -73,7 +72,7 @@ html{
           top: 200px;
       }
 
-      #pageTwo{
-         display: none;
-      }
-    
+        #pageTwo{
+            display: none;
+        }
+      
